# GLStudio

./: .gitignore  CMakeLists.txt  README.md
include/: LoadShaders.h  LoadTexture.h  Quad.h  WindowInit.h
shaders/: crt.glsl  frag.glsl  pixelation.glsl  vertex.glsl
src/: LoadShaders.cpp  LoadTexture.cpp  Main.cpp  Quad.cpp  WindowInit.cpp
